; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cbin.c___filterShell.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cbin.c___filterShell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @__filterShell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @__filterShell(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @r_return_val_if_fail(i8* %7, i32* null)
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @strlen(i8* %9)
  %11 = add nsw i64 %10, 1
  %12 = call i8* @malloc(i64 %11)
  store i8* %12, i8** %4, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %38

16:                                               ; preds = %1
  %17 = load i8*, i8** %4, align 8
  store i8* %17, i8** %5, align 8
  br label %18

18:                                               ; preds = %32, %16
  %19 = load i8*, i8** %3, align 8
  %20 = load i8, i8* %19, align 1
  %21 = icmp ne i8 %20, 0
  br i1 %21, label %22, label %35

22:                                               ; preds = %18
  %23 = load i8*, i8** %3, align 8
  %24 = load i8, i8* %23, align 1
  store i8 %24, i8* %6, align 1
  %25 = load i8, i8* %6, align 1
  %26 = sext i8 %25 to i32
  switch i32 %26, label %28 [
    i32 64, label %27
    i32 96, label %27
    i32 124, label %27
    i32 59, label %27
    i32 61, label %27
    i32 10, label %27
  ]

27:                                               ; preds = %22, %22, %22, %22, %22, %22
  br label %32

28:                                               ; preds = %22
  %29 = load i8, i8* %6, align 1
  %30 = load i8*, i8** %5, align 8
  %31 = getelementptr inbounds i8, i8* %30, i32 1
  store i8* %31, i8** %5, align 8
  store i8 %29, i8* %30, align 1
  br label %32

32:                                               ; preds = %28, %27
  %33 = load i8*, i8** %3, align 8
  %34 = getelementptr inbounds i8, i8* %33, i32 1
  store i8* %34, i8** %3, align 8
  br label %18

35:                                               ; preds = %18
  %36 = load i8*, i8** %5, align 8
  store i8 0, i8* %36, align 1
  %37 = load i8*, i8** %4, align 8
  store i8* %37, i8** %2, align 8
  br label %38

38:                                               ; preds = %35, %15
  %39 = load i8*, i8** %2, align 8
  ret i8* %39
}

declare dso_local i32 @r_return_val_if_fail(i8*, i32*) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
